fix :overflow

--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -51,5 +51,5 @@
     height: 100px;
     line-height: 100px;
     background-color :#818181;
-    overflow: hidden;   
+    overflow: auto;   
 }
